--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
           <br />I like to design and develop websites and learn new things.
         </p>
         <div class="home-sci">
-          <a href="https://twitter.com/RazaIzhaan" style="--i: 7"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.instagram.com/_.izzu__/" style="--i: 8"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/Izhaan-Raza" style="--i: 9"><i class="bx bxl-github"></i></a>
+          <a href="https://twitter.com/RazaIzhaan" style="--i: 7"
+            ><i class="bx bxl-twitter"></i
+          ></a>
+          <a href="https://www.instagram.com/_.izzu__/" style="--i: 8"
+            ><i class="bx bxl-instagram"></i
+          ></a>
+          <a href="https://github.com/Izhaan-Raza" style="--i: 9"
+            ><i class="bx bxl-github"></i
+          ></a>
           <!-- <a href="#"></a> -->
         </div>
         <a href="about.html" class="btn-box">More About me </a>
