--- a/index.html
+++ b/index.html
@@ -52,7 +52,27 @@
         </div>
         <a href="about.html" class="btn-box">More About me </a>
       </div>
+      <span class="home-imgHover"></span>
     </section>
+
+    <!-- <section class="about" id="about">
+      <div class="about-img">
+        <img src="smalll.png" alt="" />
+      </div>
+      <div class="about-text">
+        <h2>About <span>Me</span></h2>
+        <h4>I am a passionate front end developer and designer</h4>
+        <p>
+          I am a high school student and a passionate web developer. I like to
+          design and develop websites and learn new things. I stduy in class 12
+          and I am 17 years old. I have been learning web development for 2
+          years now and I have made many projects. I have also made a few
+          websites for my friends. I have also represented my school in many
+          interschool and national scince fests. Some of my skills and projects
+          are listed below.
+        </p>
+      </div>
+    </section> -->
     <script src="main.js"></script>
   </body>
 </html>
