--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-F7ZKEBRXF6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-F7ZKEBRXF6");
+    </script>
   </head>
   <body>
     <header class="header">
