changed background image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     />
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- Google tag (gtag.js) -->
+    <!------------------------------------------important --------------------------------------------->
+
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-F7ZKEBRXF6"
@@ -30,6 +32,8 @@
 
       gtag("config", "G-F7ZKEBRXF6");
     </script>
+    
+    <!------------------------------------------important --------------------------------------------->
   </head>
   <body>
     <header class="header">
