--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="abc">
-      <h3 class="coming">Coming Soon</h3>
+      <h3 class="coming">Coming Soon. Please be patient</h3>
       <a href="index.html" class="btn-box">Go back </a>
     </div>
   </body>
